--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </head>
   <body>
     <video autoplay muted loop id="myVideo">
-      <source src="videoBackground.mp4" type="video/mp4" />
+      <source src="https://video.wixstatic.com/video/a53246_735b7d9ea1ee48daa8fb1b0295dea714/720p/mp4/file.mp4" type="video/mp4" />
       Your browser does not support HTML5 video.
     </video>
     <script>
